--- a/orig_config.json
+++ b/orig_config.json
@@ -8,23 +8,18 @@
       "rate": 0.0525
     },
     {
-      "name": "alejandra student loan",
+      "name": "alejandra college loan",
       "start_timestamp": 202301,
       "end_timestamp": 202501,
       "loan_amount": 7000,
-      "rate": 0.05
-    },    {
-      "name": "nana loan",
-      "start_timestamp": 202301,
-      "end_timestamp": 202901,
-      "loan_amount": 25000,
-      "rate": 0
-    },    {
+      "rate": 0.051
+    },
+    {
       "name": "401k loan",
       "start_timestamp": 202301,
-      "end_timestamp": 202901,
-      "loan_amount": 22500,
-      "rate": 0.046
+      "end_timestamp": 202501,
+      "loan_amount": 25000,
+      "rate": 0.042
     }
   ],
   "assets": [
@@ -41,46 +36,30 @@
       "income_args": {
         "income_amount": 0
       }
-    },
-    {
-      "name":"401k account",
-      "start_timestamp": 202301,
-      "end_timestamp": 202901,
-      "asset_cost": 0,
-      "appreciation_type": "constant",
-      "appreciation_args": {
-        "appreciation_amount": 0
-      },
-      "income_type": "constant",
-      "income_args": {
-        "income_amount": 450
-      }
     }
   ],
   "incomes": [
     {
-      "name": "cash_start",
+      "name": "cash start",
       "start_timestamp": 202301,
       "end_timestamp": 202301,
-      "income_amount": 70500
+      "income_amount": 0
     },
     {
       "type": "manual_schedule",
       "name": "Alejandra Salary",
-      "csv_path": "incomes/alejandra_income_conservative.csv",
-      "percentage": 0.55
+      "csv_path": "incomes/alejandra_income_conservative.csv"
     },
     {
       "type": "manual_schedule",
       "name": "Matt Salary",
-      "csv_path": "incomes/matt_income_conservative.csv",
-      "percentage": 0.55
+      "csv_path": "incomes/matt_income_conservative.csv"
     },
     {
       "name": "Living Expenses",
       "start_timestamp": 202302,
       "end_timestamp": 205212,
-      "income_amount": -4000
+      "income_amount": -3000
     }
   ],
   "plotting": {
